2011-06-01  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Add BeamThrust projection

2011-05-31  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Fix LIBS for fastjet-3.0

	* Add basic infrastructure for Taylor plots in make-plots

	* Fix OPAL_2004_S6132243: They are using charged+neutral.

	* Release 1.5.1

2011-05-22  Andy Buckley  <andy@insectnation.org>

	* Adding plots of stable and decayed PID multiplicities to
	MC_GENERIC (useful for sanity-checking generator setups).

	* Removing actually-unused ProjectionApplier.fhh forward
	declaration header.

2011-05-20  Andy Buckley  <andy@insectnation.org>

	* Removing import of ipython shell from rivet-rescale, having just
	seen it throw a multi-coloured warning message on a student's
	lxplus Rivet session!

	* Adding support for the compare-histos --no-ratio flag when using
	rivet-mkhtml. Adding --rel-ratio, --linear, etc. is an exercise
	for the enthusiast ;-)

2011-05-10  Andy Buckley  <andy@insectnation.org>

	* Internal minor changes to the ProjectionHandler and
	ProjectionApplier interfaces, in particular changing the
	ProjectionHandler::create() function to be called getInstance and
	to return a reference rather than a pointer. The reference change
	is to make way for an improved singleton implementation, which
	cannot yet be used due to a bug in projection memory
	management. The code of the improved singleton is available, but
	commented out, in ProjectionManager.hh to allow for easier
	migration and to avoid branching.

2011-05-08  Andy Buckley  <andy@insectnation.org>

	* Extending flat2aida to be able to read from and write to
	stdin/out as for aida2flat, and also eliminating the internal
	histo parsing representation in favour of the one in
	lighthisto. lighthisto's fromFlat also needed a bit of an
	overhaul: it has been extended to parse each histo's chunk of
	text (including BEGIN and END lines) in fromFlatHisto, and for
	fromFlat to parse a collection of histos from a file, in keeping