@@ -1,16 +1,16 @@
+# BEGIN PLOT /MC_GENERIC/E$
+Title=Energy of all particles
+XLabel=$E$ [GeV]
+YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}E$ [GeV$^{-1}$]
+# END PLOT
+
 # BEGIN PLOT /MC_GENERIC/ECh
 Title=Energy of charged particles
 XLabel=$E$ [GeV]
 YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}E$ [GeV$^{-1}$]
 # END PLOT
 
-# BEGIN PLOT /MC_GENERIC/E
-Title=Energy of all particles
-XLabel=$E$ [GeV]
-YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}E$ [GeV$^{-1}$]
-# END PLOT
-
-# BEGIN PLOT /MC_GENERIC/Eta.*
+# BEGIN PLOT /MC_GENERIC/Eta
 XLabel=$\eta$
 YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}\eta$
 LogY=0
@@ -82,7 +82,7 @@ YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}N_\text{ch}$
 LogY=0
 # END PLOT
 
-# BEGIN PLOT /MC_GENERIC/Mult
+# BEGIN PLOT /MC_GENERIC/Mult$
 Title=Total multiplicity of events
 XLabel=$N$
 YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}N$
@@ -107,6 +107,14 @@ Title=Average per-event multiplicity of stable particle IDs
 Title=Average per-event multiplicity of \emph{all} (unphysical) particle IDs
 # END PLOT
 
+# BEGIN PLOT /MC_GENERIC/Phi$
+Title=Azimuthal distribution of all particles
+XLabel=$\phi$
+YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}\phi$
+LogY=0
+LegendYPos=0.5
+# END PLOT
+
 # BEGIN PLOT /MC_GENERIC/PhiCh
 Title=Azimuthal distribution of charged particles
 XLabel=$\phi$
@@ -115,12 +123,11 @@ LogY=0
 LegendYPos=0.5
 # END PLOT
 
-# BEGIN PLOT /MC_GENERIC/Phi
-Title=Azimuthal distribution of all particles
-XLabel=$\phi$
-YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}\phi$
-LogY=0
-LegendYPos=0.5
+# BEGIN PLOT /MC_GENERIC/Pt$
+Title=Transverse momentum of all particles
+XLabel=$p_\perp$ [GeV]
+YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}p_\perp$ [GeV$^{-1}$]
+FullRange=1
 # END PLOT
 
 # BEGIN PLOT /MC_GENERIC/PtCh
@@ -130,30 +137,7 @@ YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}p_\perp$ [GeV$^{-1}$]
 FullRange=1
 # END PLOT
 
-# BEGIN PLOT /MC_GENERIC/Pt
-Title=Transverse momentum of all particles
-XLabel=$p_\perp$ [GeV]
-YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}p_\perp$ [GeV$^{-1}$]
-FullRange=1
-# END PLOT
-
-# BEGIN PLOT /MC_GENERIC/RapidityCh
-Title=Rapidity of charged particles
-XLabel=$y$
-YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}y$
-LogY=0
-LegendYPos=0.5
-# END PLOT
-
-# BEGIN PLOT /MC_GENERIC/RapidityChPMRatio
-Title=Rapidity $+/-$ ratio of charged particles
-XLabel=$|y|$
-YLabel=$\mathrm{d}\sigma/\mathrm{d}y_+ \; / \; \mathrm{d}\sigma/\mathrm{d}y_-$
-LogY=0
-LegendYPos=0.5
-# END PLOT
-
-# BEGIN PLOT /MC_GENERIC/Rapidity
+# BEGIN PLOT /MC_GENERIC/Rapidity$
 Title=Rapidity of all particles
 XLabel=$y$
 YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}y$
@@ -163,6 +147,22 @@ LegendYPos=0.5
 
 # BEGIN PLOT /MC_GENERIC/RapidityPMRatio
 Title=Rapidity $+/-$ ratio of all particles
+XLabel=$|y|$
+YLabel=$\mathrm{d}\sigma/\mathrm{d}y_+ \; / \; \mathrm{d}\sigma/\mathrm{d}y_-$
+LogY=0
+LegendYPos=0.5
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/RapidityCh$
+Title=Rapidity of charged particles
+XLabel=$y$
+YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}y$
+LogY=0
+LegendYPos=0.5
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/RapidityChPMRatio
+Title=Rapidity $+/-$ ratio of charged particles
 XLabel=$|y|$
 YLabel=$\mathrm{d}\sigma/\mathrm{d}y_+ \; / \; \mathrm{d}\sigma/\mathrm{d}y_-$
 LogY=0
